2008-09-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9346: Preinitialise GLOBALS[LANG] in init.php (thanks to Steffen Kamper)

2008-09-17  Martin Kutschker  <masi@typo3.org>

	* Added feature #1957: When deleting a record in the BE, the message should show the record label (thanx to Rob Vonk for the initial patch)
	* Added feature #8995: Extension "felogin" - replace user fields in display messages (thanx to Steffen Kamper)

2008-09-17  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9370: htmlArea RTE: enhanced toggleborders feature

2008-09-16  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #9362: htmlArea RTE: highlight active items in context menu as in toolbar
	* Follow up to #9354: htmlArea RTE: no default css rule is provided for indentation: px to em

2008-09-16  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #9360: TypoScript Object Browser interprets HTML Tags in comments (Thanks to Stefano Kowalke)

2008-09-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9310: table border colour popups appear only when textcolour button is shown
	* Fixed bug #9354: htmlArea RTE: no default css rule is provided for indentation

2008-09-15  Ingo Renner  <ingo@typo3.org>

	* Added feature 9097: Introduce a new caching framework (backported from FLOW3)
	* Fixed bug 9283: declare marker handling functions of t3lib_parsehtml static

2008-09-14  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #7595: Docheaders: Module Admin tools > Indexing: No docheader (Thanks to Christian Kuhn, initial patch by Patrick Broens)
	* Fixed bug #7534: Docheaders: Wizard Table: No docheader (Thanks to Christian Kuhn, initial patch by Patrick Broens)
	* Fixed bug #7536: Docheaders: Wizard Forms: No docheader (Thanks to Christian Kuhn and Steffen Kamper, initial fix by Patrick Broens)
	* Updated NEWS.txt for #9167
	* Followup to #9167: Mark extension as write protected: Option now called "excludeFromUpdates"