@@ -1,3 +1,7 @@
+2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values
+
 2008-09-17  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #9370: htmlArea RTE: enhanced toggleborders feature
