@@ -1,3 +1,7 @@
+2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values
+
 2008-09-18  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug #9346: Preinitialise GLOBALS[LANG] in init.php (thanks to Steffen Kamper)
